# deep_search

./: README.md  agents_graph.ipynb  deep_search.py  deep_search_app.py  pyproject.toml
src/deep_search/: __init__.py  clarifier_agent.py  client.py  manager_agent.py  planner_agent.py  writer_agent.py
